--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trpc/client": "^9.27.0",
+    "@trpc/server": "^9.27.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.48",
     "@types/react": "^18.0.17",
