--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "framer-motion": "^7.1.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
